--- a/DSImager.Application/packages.config
+++ b/DSImager.Application/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="FontAwesome.WPF" version="4.5.0.8" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.3.0-ALPHA194" targetFramework="net452" />
+  <package id="QuickConverter" version="1.2.3.0" targetFramework="net452" />
   <package id="SimpleInjector" version="3.2.2" targetFramework="net452" />
 </packages>
